# eightfold-ai-candidate-transformer

./: .gitignore  README.md  pyproject.toml
examples/: projection.json  projection.yaml
sample_data/: John Doe.docx  candidate1.json  john_github.json  linkedIn.json  recruiter_notes.txt
src/candidate_transformer/: __init__.py  cli.py  config.py  graph.py  models.py  normalization.py  pipeline.py  projection.py  resolution.py  ui.py
src/candidate_transformer/extraction/: __init__.py  ollama_client.py  pipeline.py  regex.py  spacy_extractor.py
src/candidate_transformer/sources/: README.md  __init__.py  ats.py  base.py  files.py  web.py
tests/: test_document_parsing.py  test_smoke.py
tests/fixtures/: ats_sample.csv  resume_sample.docx
