[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "candidate-transformer"
version = "0.1.0"
description = "Enterprise-grade human-centric multi-source candidate data transformer"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "networkx>=3.2",
  "pydantic>=2.7",
  "PyYAML>=6.0",
  "streamlit>=1.37",
  "typer>=0.12",
  "phonenumbers>=8.13",
  "python-dateutil>=2.9",
]

[project.optional-dependencies]
spacy = ["spacy>=3.7"]
documents = ["pypdf>=4.2", "python-docx>=1.1"]
all = [
  "spacy>=3.7",
  "pypdf>=4.2",
  "python-docx>=1.1",
]

[project.scripts]
candidate-transformer = "candidate_transformer.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
addopts = "-q"
